renamed the userdata file

--- a/maps/resortLocations.html
+++ b/maps/resortLocations.html
@@ -22,8 +22,8 @@
      let userMap = new google.maps.Map(document.getElementById("map"), mapOptions);
 
     let userMarker = new google.maps.Marker({map:userMap,position:coords,title:"You are here"});
-
-    let 
+    let resortName1Marker = new google.maps.Marker({map:userMap,position:coords,title:"Resort 1"});
+    let resortName2Marker = new google.maps.Marker({map:userMap,position:coords,title:"Resort 2"});
 
     // this code will be for the resort's marker and have the two markers on the same map should  user want to see how far they are
     // let resortMarker = new google.maps.Marker({map:userMap,position:resortCoord})
